crates/mcb-server/tests/contract/snapshots/contract__entity_contract_tests__entity_happy_path.snap
---
source: crates/mcb-server/tests/contract/entity_contract_tests.rs
assertion_line: 18
expression: "snapshot_payload(&request, status, &response)"
---
{
  "request": {
    "jsonrpc": "2.0",
    "method": "tools/call",
    "params": {
      "name": "entity",
      "arguments": {
        "action": "list",
        "resource": "org"
      }
    },
    "id": 1
  },
  "status": 200,
  "response": {
    "jsonrpc": "2.0",
    "result": {
      "resultType": "complete",
      "content": [
        {
          "type": "text",
          "text": "[]"
        }
      ],
      "isError": false
    },
    "id": 1
  }
}
