crates/mcb-server/tests/contract/snapshots/contract__entity_contract_tests__entity_invalid_args.snap
---
source: crates/mcb-server/tests/contract/entity_contract_tests.rs
expression: "snapshot_payload(&request, status, &response)"
---
{
  "request": {
    "jsonrpc": "2.0",
    "method": "tools/call",
    "params": {
      "name": "entity",
      "arguments": {
        "action": 123,
        "resource": "org"
      }
    },
    "id": 1
  },
  "status": 200,
  "response": {
    "jsonrpc": "2.0",
    "error": {
      "code": -32602,
      "message": "Failed to parse arguments: invalid type: integer `123`, expected string or map"
    },
    "id": 1
  }
}
